--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     docker:
       - image: hashicorp/terraform:light
-    ssteps:
+    steps:
       - checkout
       - run:
           name: INIT
